<resources>
    <string name="app_name"											>Vehiculum</string>
    <string name="activity_bureaucratic_header"				    	>Bureaucracy expense</string>
    <string name="activity_car_add_brand_hint"						>Brand</string>
    <string name="activity_car_add_button_add"						>Add car</string>
    <string name="activity_car_add_button_edit"						>Edit car</string>
    <string name="activity_car_add_button_get_photo"				>Add photo</string>
    <string name="activity_car_add_distance_units_hint"				>Distance units</string>
    <string name="activity_car_add_header"							>Enter the details about your car</string>
    <string name="activity_car_add_label"							>Add a new car</string>
    <string name="activity_car_add_license_plate_hint"				>License plate</string>
    <string name="activity_car_add_odometer_units_text"				>Odometer units</string>
    <string name="activity_car_add_model_hint"						>Model</string>
    <string name="activity_car_add_model_year_hint"					>Model Year</string>
    <string name="activity_car_add_nickname_hint"					>Nickname (optional)</string>
    <string name="activity_car_add_quantity_units_hint"				>Quantity units</string>
    <string name="activity_car_edit_label"							>Edit your car</string>
    <string name="activity_donate_donation_period"					>To change your donation, select your new donation program</string>
    <string name="activity_donate_period_monthly"					>This much coffee should keep us going for a month. Thank you.</string>
    <string name="activity_donate_period_prompt"					>Select your donation volume</string>
    <string name="activity_donate_period_yearly"					>Wow, this is enough coffee for us for the whole year!</string>
    <string name="activity_donate_prompt_cancel"					>Continue</string>
    <string name="activity_donate_prompt_continue"					>Cancel</string>
    <string name="activity_donate_resignup_prompt"					>To renew your donation, select your donation volume</string>
    <string name="activity_donate_update_prompt"					>To change your donation, select your new donation period</string>
    <string name="activity_entries_list_type_hint"					>Filter: </string>
    <string name="activity_entries_tyres_new_count"					>New tyres: </string>
    <string name="activity_entry_add_button_bureaucratic"			>Bureaucracy</string>
    <string name="activity_entry_add_button_insurance"				>Insurance payment</string>
    <string name="activity_entry_add_button_maintenance"			>Maintenance</string>
    <string name="activity_entry_add_button_refuel"					>Refuelling</string>
    <string name="activity_entry_add_button_service"				>Service</string>
    <string name="activity_entry_add_button_toll"					>Toll expense</string>
    <string name="activity_entry_add_button_tyres_change"			>Change tyres</string>
    <string name="activity_entry_add_field_missing_alert"			>Some of the required fields are not filled-in:</string>
    <string name="activity_entry_add_header"						>Pick an action to record</string>
    <string name="activity_entry_add_label"							>Adding new event</string>
    <string name="activity_expense_add_currency_hint"				>Currency</string>
    <string name="activity_expense_add_cost_hint"					>Cost</string>
    <string name="activity_expense_add_price_hint"					>Price</string>
    <string name="activity_garage_management_label"					>Your garage</string>
    <string name="activity_garage_management_button_car_add"		>Add a new car</string>
    <string name="activity_garage_management_car_activated_toast"	>Car activated</string>
    <string name="activity_garage_management_info_text"				>List of cars in your garage:</string>
    <string name="activity_generic_button_date_change"				>Change date</string>
    <string name="activity_generic_button_entry_save"				>Save</string>
    <string name="activity_generic_button_new_tag_add"				>Add new tag</string>
    <string name="activity_generic_cancel_hint"			    		>Cancel</string>
    <string name="activity_generic_comment_hint"					>Additional comment</string>
    <string name="activity_generic_cost_hint"						>Total cost</string>
    <string name="activity_generic_discard_changes_warning"			>You have unsaved changes. Do you really want to discard them?</string>
    <string name="activity_generic_discard_hint"					>Discard</string>
    <string name="activity_generic_failure_hint"                    >Failure!</string>
    <string name="activity_generic_linear_tag_deletion_alert_1"		>Are you sure you want to remove tag</string>
    <string name="activity_generic_linear_tag_deletion_alert_2"		>from this entry?</string>
    <string name="activity_generic_mileage_hint"					>Mileage</string>
    <string name="activity_generic_ok_hint"                         >OK</string>
    <string name="activity_generic_part_add_condition_hint"			>Condition</string>
    <string name="activity_generic_part_add_quantity_hint"			>Quantity</string>
    <string name="activity_generic_sorry_hint"                      >Sorry</string>
    <string name="activity_generic_tag_alert_end"                   >has already been attached</string>
    <string name="activity_generic_tag_deletion_alert_1"            >Are you sure you want to proceed? This tag is used in</string>
    <string name="activity_generic_tag_deletion_alert_2"            >entries</string>
    <string name="activity_generic_tag_toast_start"		    	    >Tag</string>
    <string name="activity_generic_tag_toast_end"		    	    >has been attached</string>
    <string name="activity_generic_warning_hint"                    >Warning</string>
    <string name="activity_insurance_header"						>Insurance expense</string>
    <string name="activity_insurance_type_hint"						>Insurance type</string>
    <string name="activity_main_average"							>Average</string>
    <string name="activity_main_average_consumption"				>Average consumption</string>
    <string name="activity_main_button_entry_add"					>Record a new event</string>
    <string name="activity_main_button_stats_view"					>View statistics</string>
    <string name="activity_main_button_garage_enter"				>Enter garage</string>
    <string name="activity_main_car"								>Car</string>
    <string name="activity_main_combined_average"				    >Combined average consumption</string>
    <string name="activity_main_consumption_combined"				>Combined</string>
    <string name="activity_main_create_garage_alert"				>You didn\'t setup your garage yet. Prepare one now.</string>
    <string name="activity_main_garage_empty"						>Your garage is empty</string>
    <string name="activity_main_garage_saved_toast"					>The changes have been saved</string>
    <string name="activity_main_garage_saving_error_toast"			>Problem occurred when saving changes</string>
    <string name="activity_main_google_services_cnx_error_toast"	>A problem occurred when connecting to Google Services</string>
    <string name="activity_main_header"								>Manage your enthusiasm!</string>
    <string name="activity_main_no_expenses_message"				>Record some events.\nThere\'s nothing to be displayed yet.</string>
    <string name="activity_main_relative_costs"						>Relative values</string>
    <string name="activity_main_relative_costs_fuel"				>Relative values for </string>
    <string name="activity_main_relative_since_last_refuel"			>Costs since last refuel</string>
    <string name="activity_main_since_last_refuel"					>Consumption since the last refuel</string>
    <string name="activity_main_total_costs"						>Total values</string>
    <string name="activity_maintenance_button_add"					>+</string>
    <string name="activity_maintenance_button_delete"				>-</string>
    <string name="activity_maintenance_header"						>Maintenance</string>
    <string name="activity_maintenance_labor_cost_hint"				>Labor cost</string>
    <string name="activity_maintenance_parts_cost_hint"				>Parts cost: </string>
    <string name="activity_maintenance_total_cost_hint"				>Total cost: </string>
    <string name="activity_maintenance_type_accident_repair_label"	>Accident repair</string>
    <string name="activity_maintenance_type_hint"					>Maintenance type</string>
    <string name="activity_maintenance_type_planned_label"			>Planned</string>
    <string name="activity_maintenance_type_unplanned_label"		>Unplanned</string>
    <string name="activity_part_add_carmaker_part_id_hint"			>Carmaker part No.</string>
    <string name="activity_part_add_manufacturer_part_id_hint"		>Manufacturer part No.</string>
    <string name="activity_part_add_originality_hint"				>Originality</string>
    <string name="activity_part_add_producer_hint"					>Manufacturer</string>
    <string name="activity_refuel_fuel_type_hint"					>Fuel type</string>
    <string name="activity_refuel_header"							>Enter your bill details</string>
    <string name="activity_refuel_price_hint"						>Price per liter</string>
    <string name="activity_refuel_quantity_hint"					>Fuel quantity bought</string>
    <string name="activity_refuel_quantity_unit_hint"				>Quantity unitIsoCode</string>
    <string name="activity_reports_navigate_chart_title"			>overall</string>
    <string name="activity_service_header"							>Service</string>
    <string name="activity_service_type_hint"						>Service type</string>
    <string name="activity_stats_show_button_charts"				>Charts</string>
    <string name="activity_stats_show_button_fuelling"				>Recorded entries</string>
    <string name="activity_stats_show_header"						>Statistic center</string>
    <string name="activity_toll_header"								>Toll</string>
    <string name="activity_toll_type_hint"							>Toll category</string>
    <string name="activity_tyre_add_brand_hint"						>Brand</string>
    <string name="activity_tyre_add_button_entry_save"				>Save the record</string>
    <string name="activity_tyre_add_diameter_hint"					>Diameter</string>
    <string name="activity_tyre_add_dimension_separator_1"          > / </string>
    <string name="activity_tyre_add_dimension_separator_2"          > / R </string>
    <string name="activity_tyre_add_dot_hint"						>DOT</string>
    <string name="activity_tyre_add_header"							>New tyre</string>
    <string name="activity_tyre_add_height_hint"					>Height</string>
    <string name="activity_tyre_add_model_hint"						>Model</string>
    <string name="activity_tyre_add_season_hint"					>Season</string>
    <string name="activity_tyre_add_speed_index_hint"				>Speed index</string>
    <string name="activity_tyre_add_thread_level_hint"				>Thread level</string>
    <string name="activity_tyre_add_weight_index_hint"				>Weight index</string>
    <string name="activity_tyre_add_width_hint"						>Width</string>
    <string name="activity_tyre_change_button_advanced"				>Advanced</string>
    <string name="activity_tyre_change_button_entry_save"			>Save the record</string>
    <string name="activity_tyre_change_comment_hint"				>Additional comment</string>
    <string name="activity_tyre_change_labor_cost_hint"				>Labor cost</string>
    <string name="menu_action_export"								>Export</string>
    <string name="menu_action_restore"								>Restore</string>
    <string name="menu_action_settings"								>Settings</string>
    <string name="preferences_units_consumption"					>Consumption</string>
    <string name="preferences_units_consumption_dialog"				>Select consumption units for reporting</string>
    <string name="preferences_units_cost"							>Cost</string>
    <string name="preferences_units_cost_dialog"					>Select cost units for reporting</string>
    <string name="preferences_units_distance"						>Distance</string>
    <string name="preferences_units_distance_dialog"				>Select distance units for reporting</string>
    <string name="preferences_units_title"							>Units in reports</string>
    <string name="preferences_units_volume"							>Volume</string>
    <string name="preferences_units_volume_dialog"					>Select volume units for reporting</string>
</resources>