<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
            android:title="@string/preferences_units_title">
            
        <ListPreference
                android:key="consumption_unit_key"
                android:title="@string/preferences_units_consumption"
                android:summary="%s"
                android:entries="@array/preferences_units_consumption_entries"
                android:entryValues="@array/preferences_units_consumption_values"
                android:dialogTitle="@string/preferences_units_consumption_dialog"
                android:defaultValue="0" />
        
        <ListPreference
                android:key="distance_unit_key"
                android:title="@string/preferences_units_distance"
                android:summary="%s"
                android:entries="@array/preferences_units_distance_entries"
                android:entryValues="@array/preferences_units_distance_values"
                android:dialogTitle="@string/preferences_units_distance_dialog"
                android:defaultValue="0" />
        
        <ListPreference
                android:key="volume_unit_key"
                android:title="@string/preferences_units_volume"
                android:summary="%s"
                android:entries="@array/preferences_units_volume_entries"
                android:entryValues="@array/preferences_units_volume_values"
                android:dialogTitle="@string/preferences_units_volume_dialog"
                android:defaultValue="0" />
        
        <ListPreference
            	android:key="cost_unit_key"
            	android:title="@string/preferences_units_cost"
            	android:summary="%s"
            	android:entries="@array/preferences_units_cost_entries"
            	android:entryValues="@array/preferences_units_cost_values"
                android:dialogTitle="@string/preferences_units_cost_dialog"
                android:defaultValue="0" />
        
    </PreferenceCategory>
<!-- 
    <PreferenceCategory
            android:title="string - dialog_based_preferences">
        
        <CheckBoxPreference
                android:key="checkbox_preference"
                android:title="string - title_checkbox_preference"
                android:summary="string - summary_checkbox_preference" />

        <PreferenceScreen
            android:key="second_preferencescreen"
            android:title="WiFi settings">
        	
        	<CheckBoxPreference
                android:key="prefer wifi"
                android:title="Prefer WiFi" />
        	
    	</PreferenceScreen>

        <EditTextPreference
                android:key="edittext_preference"
                android:title="string - title_edittext_preference"
                android:summary="string - summary_edittext_preference"
                android:dialogTitle="string - dialog_title_edittext_preference" />

    </PreferenceCategory>

    <PreferenceCategory
            android:title="string - launch_preferences">

        <PreferenceScreen
                android:fragment="sk.berops.android.caramel.gui.preferences.PreferenceWithHeaders$Prefs1FragmentInner"
                android:title="string - title_fragment_preference"
                android:summary="string - summary_fragment_preference">
            <extra android:name="someKey" android:value="somePrefValue" />
        </PreferenceScreen>

        <PreferenceScreen
                android:title="string - title_intent_preference"
                android:summary="string - summary_intent_preference">

            <intent android:action="android.intent.action.VIEW"
                    android:data="http://www.android.com" />

        </PreferenceScreen>

    </PreferenceCategory>

    <PreferenceCategory
            android:title="string - preference_attributes">

        <CheckBoxPreference
                android:key="parent_checkbox_preference"
                android:title="string - title_parent_preference"
                android:summary="string - summary_parent_preference" />

        <CheckBoxPreference
                android:key="child_checkbox_preference"
                android:dependency="parent_checkbox_preference"
                android:layout="?android:attr/preferenceLayoutChild"
                android:title="string - title_child_preference"
                android:summary="string - summary_child_preference" />

    </PreferenceCategory>
 -->
</PreferenceScreen>
