<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/background_blue"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_blue"
            android:isScrollContainer="true"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:scrollbars="vertical"
            tools:context=".MainActivity">

            <TextView
                android:id="@+id/activity_car_add_header"
                style="@style/caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_car_add_header"/>

            <EditText
                android:id="@+id/activity_car_add_brand"
                style="@style/plain_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/activity_car_add_header"
                android:hint="@string/activity_car_add_brand_hint"
                android:inputType="textCapWords"/>

            <EditText
                android:id="@+id/activity_car_add_model"
                style="@style/plain_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/activity_car_add_brand"
                android:hint="@string/activity_car_add_model_hint"
                android:inputType="textCapWords"/>

            <EditText
                android:id="@+id/activity_car_add_model_year"
                style="@style/plain_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/activity_car_add_model"
                android:hint="@string/activity_car_add_model_year_hint"
                android:inputType="number"/>

            <EditText
                android:id="@+id/activity_car_add_license_plate"
                style="@style/plain_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/activity_car_add_model_year"
                android:hint="@string/activity_car_add_license_plate_hint"
                android:inputType="textCapCharacters"/>

            <EditText
                android:id="@+id/activity_car_add_mileage"
                style="@style/plain_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/activity_car_add_license_plate"
                android:hint="@string/activity_generic_mileage_hint"
                android:inputType="number"/>

            <EditText
                android:id="@+id/activity_car_add_nickname"
                style="@style/plain_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/activity_car_add_mileage"
                android:hint="@string/activity_car_add_nickname_hint"/>

            <Spinner
                android:id="@+id/activity_car_add_distance_unit"
                style="@style/plain_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/activity_car_add_nickname"
                android:entries="@array/activity_car_add_distance_units"
                android:prompt="@string/activity_car_add_distance_units_hint"/>

            <Button
                android:id="@+id/activity_car_add_button_commit"
                style="@style/button_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/activity_car_add_distance_unit"
                android:background="@drawable/transparent_button"
                android:onClick="onClick"
                android:text="@string/activity_car_add_button_add"/>

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>