<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_main_action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_action_settings"/>

    <item
        android:id="@+id/menu_main_action_export"
        android:orderInCategory="200"
        android:showAsAction="never"
        android:title="@string/menu_action_export"/>

    <item
        android:id="@+id/menu_main_action_restore"
        android:orderInCategory="300"
        android:showAsAction="never"
        android:title="@string/menu_action_restore"/>
    <!--
    <item
        android:id="@+id/menu_main_action_gdrive_backup"
        android:orderInCategory="300"
        android:showAsAction="never"
        android:title="@string/menu_action_gdrive_backup"/>
        -->
    <item
        android:id="@+id/menu_main_action_gdrive_restore"
        android:orderInCategory="300"
        android:showAsAction="never"
        android:title="@string/menu_action_gdrive_restore"/>

</menu>