<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_blue"
        android:orientation="vertical">

        <include
            layout="@layout/activity_new_event_common_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:id="@+id/activity_bureaucratic_mileage_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/activity_bureaucratic_mileage"
                style="@style/plain_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".7"
                android:hint="@string/activity_generic_mileage_hint"
                android:inputType="number"/>

            <TextView
                android:id="@+id/activity_bureaucratic_distance_unit"
                style="@style/plain_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".3"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/activity_bureaucratic_cost_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/activity_bureaucratic_cost"
                style="@style/plain_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".7"
                android:hint="@string/activity_generic_cost_hint"
                android:inputType="numberDecimal"/>

            <Spinner
                android:id="@+id/activity_bureaucratic_currency"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".3"
                android:entries="@array/activity_expense_add_currency"
                android:prompt="@string/activity_expense_add_currency_hint"/>
        </LinearLayout>

        <EditText
            android:id="@+id/activity_bureaucratic_comment"
            style="@style/plain_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/activity_generic_comment_hint"
            android:inputType="textMultiLine"/>

        <Button
            android:id="@+id/activity_bureaucratic_button_commit"
            style="@style/button_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/transparent_button"
            android:onClick="onClick"
            android:text="@string/activity_generic_button_entry_save"/>

    </LinearLayout>
</ScrollView>